--- a/Doom RPG Launcher/Properties/Settings.settings
+++ b/Doom RPG Launcher/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
+<SettingsFile CurrentProfile="(Default)" GeneratedClassNamespace="DoomRPG.Properties" GeneratedClassName="Settings" xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings">
   <Profiles />
   <Settings />
 </SettingsFile>
